# NearFusion

./: README.md
evm/: hardhat.config.ts  package-lock.json  package.json
evm/contracts/: MockERC20.sol  NearEscrowDst.sol  NearEscrowFactory.sol  NearEscrowSrc.sol
evm/contracts/interfaces/: INearEscrowFactory.sol
evm/ignition/modules/: CrossFusionModule.ts
evm/test/: Lock.ts
frontend/: README.md  next.config.ts  package-lock.json  package.json
frontend/config/: index.ts
frontend/constants/: index.ts
frontend/context/: index.tsx
frontend/lib/: solverApi.ts  solverService.ts  toast.ts
frontend/pages/: _app.tsx  index.tsx  swap.tsx
frontend/pages/api/: prices.ts
frontend/styles/: globals.css
near/: .gitignore  Cargo.toml  README.md  build.sh  package.json
near/contracts/escrow/: Cargo.toml
near/contracts/escrow-dst/: Cargo.toml
near/contracts/escrow-dst/src/: lib.rs
near/contracts/escrow-factory/: Cargo.toml
near/contracts/escrow-factory/src/: lib.rs
near/contracts/escrow-src/: Cargo.toml
near/contracts/escrow-src/src/: lib.rs
near/contracts/escrow/src/: lib.rs
near/contracts/factory/: Cargo.toml
near/contracts/factory/src/: lib.rs
near/contracts/shared/: Cargo.toml
near/contracts/shared/src/: lib.rs
near/scripts/: deploy-testnet.sh  deploy.sh  test-escrow-creation.sh  test-escrow.sh
solver/: .eslintrc.js  .gitignore  Dockerfile  README-TESTNET.md  README.md  config.testnet.txt  env.example  package-lock.json  package.json  test-integration.js  tsconfig.json
solver/src/: index.ts
solver/src/core/: ShadeAgentSolver.ts
(+13 files in other folders)
