[workspace]
resolver = "2"

members = [
    "contracts/shared",
    "contracts/escrow-factory",
    "contracts/escrow-src",
    "contracts/escrow-dst",
]

[workspace.dependencies]
near-sdk = "5.15.1"
near-contract-standards = "5.15.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
base64 = "0.21"
borsh = "1.5.7"
schemars = "0.8"

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
# Opt into extra safety checks on arithmetic operations https://stackoverflow.com/a/64136471/249801
overflow-checks = true 